# WojackBot

./: .dockerignore  .gitignore  .pdm-python  Dockerfile  Makefile  README.md  bot.py  docker-compose.yml  gpt.py  logger.py  meme.py  pyproject.toml  reddit.py  server.py  user_checks.py  utils.py
WojackBot/: bot.py  fun.py  gpt.py  meme.py  search.py  server.py  utils.py
WojackBot/Utils/: Checks.py  discord_utils.py
WojackBot/utils/: ai.py  checks.py  constants.py  discord_utils.py  meme_utils.py  transformers.py
prompts/: memeprompt.txt
tests/: test_gpt.py
