[project]
name = "WojackBot"
version = "0.1.0"
description = ""
authors = [
    {name = "jaypyles", email = "jpylesbusiness@gmail.com"},
]
dependencies = [
    "python-dotenv>=1.0.0",
    "py-cord>=2.4.1",
    "ifunnygifmaker==0.2.2",
    "praw>=7.7.0",
    "cffi>=1.15.1",
    "gpt4free>=1.0.2",
    "pytest>=7.3.1",
    "hypothesis>=6.75.3",
]
requires-python = ">=3.9, !=3.9.7"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
bot = "WojackBot:bot"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.pyright]
include = ["WojackBot"]
exclude = ["**/node_modules", "**/__pycache__"]
ignore = []
defineConstant = { DEBUG = true }
stubPath = ""

reportMissingImports = true
reportMissingTypeStubs = false

pythonVersion = "3.9"
pythonPlatform = "Linux"


[tool.isort]
length_sort = "1"
profile = "black"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
import_heading_stdlib = "STL"
import_heading_thirdparty = "PDM"
import_heading_firstparty = "LOCAL"
import_heading_localfolder = "LOCAL"

[build-system]
requires = ["pdm-pep517>=1.0"]
build-backend = "pdm.pep517.api"
